# quickpython

./: .cruft.json  .gitignore  404.html  CHANGELOG.md  README.md  index.html  mypy.ini  pyproject.toml  setup.cfg  sitemap.xml
.github/workflows/: test.yml
CHANGELOG/: index.html
art/: logo.xcf  logo_large.xcf
art/stylesheets/: extra.css
docs/contributing/: 1.-contributing-guide.md  4.-acknowledgements.md
docs/contributing/1.-contributing-guide/: index.html
docs/contributing/2.-coding-standard/: index.html
docs/contributing/3.-code-of-conduct/: index.html
docs/contributing/4.-acknowledgements/: index.html
docs/usage/functions/: index.html
quickpython/: __init__.py  cli.py  extensions.py
quickpython/examples/: __init__.py  connect.py  eightpuzzle.py  hangman.py  memory.py  minesweeper.py  simon.py  tictactoe.py  towers.py  uno.py  zigzag.py
reference/quickpython/: index.html
reference/quickpython/cli/: index.html
reference/quickpython/examples/: index.html
reference/quickpython/examples/connect/: index.html
reference/quickpython/examples/eightpuzzle/: index.html
reference/quickpython/examples/hangman/: index.html
reference/quickpython/examples/memory/: index.html
reference/quickpython/examples/minesweeper/: index.html
reference/quickpython/examples/simon/: index.html
reference/quickpython/examples/tictactoe/: index.html
reference/quickpython/examples/towers/: index.html
reference/quickpython/extensions/: index.html
scripts/: clean.sh  lint.sh  test.sh
search/: search_index.json
tests/: test_importable.py
(+2 files in other folders)
