[tool.poetry]
name = "quickpython"
version = "0.0.4"
description = "A retro interactive coding environment powered by Python and nostalgia "
authors = ["Timothy Crosley <timothy.crosley@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6.1"
prompt-toolkit = "^3.0.6"
isort = "^5.4.2"
black = {version = "^19.10b0", allow-prereleases = true}

[tool.poetry.scripts]
quickpython = "quickpython.cli:start"
qpython = "quickpython.cli:start"

[tool.poetry.dev-dependencies]
vulture = "^1.0"
bandit = "^1.6"
safety = "^1.8"
isort = "^5.3"
flake8-bugbear = "^19.8"
black = {version = "^19.10b0", allow-prereleases = true}
mypy = "^0.730.0"
ipython = "^7.7"
pytest = "^5.0"
pytest-cov = "^2.7"
pytest-mock = "^1.10"
pep8-naming = "^0.8.2"
portray = "^1.3.0"
cruft = "^2.2"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "hug"
